# QRmai

./: .gitignore  README.md  config.json  pyproject.toml  test_mouse.py  test_p2.py
packaging/: build_exe.py  build_nuitka.py  check_version.py
src/qrmai/: __init__.py  linux.py  main.py  server.py  shared.py  updater.py  windows.py
templates/: settings.html
templates_img/: README.txt
